# drop_some

./: .rustfmt.toml  Cargo.toml  README.md
src/: lib.rs
tests/: test.rs
